# tarify

./: .gitignore  pyproject.toml
app/: constants.py  main.py
app/domain/: calculator.py  models.py
app/routes/: pricing.py
app/templates/: index.html
app/validations/: rules.py  schemas.py
tests/unit/: test_calculator.py  test_rules.py
